--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="navbar">
                 <a class="nav-brand" id="logo" href="#"><i>JQ.net</i></a>
                 <div class="navbar align-items-end">
-                    <ul>
+                    <ul id="menu">
                         <li><a href="#"><i>Portfolio</i></a></li>&nbsp;&nbsp;|&nbsp;&nbsp;
                         <li><a href="#"><i>Blog</i></a></li>&nbsp;&nbsp;|&nbsp;&nbsp;
                         <li><a href="#"><i>Contact</i></a></li>
