Added heading to portfolio entries in html and formatted them in css.

--- a/index.html
+++ b/index.html
@@ -50,30 +50,33 @@
                 <div class="col-12 col-md-4">
                     <div class="entry_bg">
                         <div class="portfolio_entry">
-                            <img src="#" width="100%"/>
+                            <h3 class="text-center"><i>Music Store</i></h3>
+                            <img src="music_store.png" width="100%"/>
                         </div>
                         <div class="external_sites">
-                            <a href="#"><img  src="Github_2x.png" width="100%"/></a>
+                            <a href="#"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="entry_bg">
                         <div class="portfolio_entry">
-                            <img src="#" width="100%"/>
+                            <h4 class="text-center"><i>Rock, Paper, Scissors, Lizard, Spock</i></h4>
+                            <img src="rpsls.png" width="100%"/>
                         </div>
                         <div class="external_sites">
-                            <a href="#"><img  src="Github_2x.png" width="100%"/></a>
+                            <a href="#"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="entry_bg">
                         <div class="portfolio_entry">
+                            <h3 class="text-center"><i>#Title#</i></h3>
                             <img src="#" width="100%"/>
                         </div>
                         <div class="external_sites">
-                            <a href="#"><img  src="Github_2x.png" width="100%"/></a>
+                            <a href="#"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -82,30 +85,33 @@
                 <div class="col-12 col-md-4">
                     <div class="entry_bg">
                         <div class="portfolio_entry">
+                            <h3 class="text-center"><i>#Title#</i></h3>
                             <img src="#" width="100%"/>
                         </div>
                         <div class="external_sites">
-                            <a href="#"><img  src="Github_2x.png" width="100%"/></a>
+                            <a href="#"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="entry_bg">
                         <div class="portfolio_entry">
+                            <h3 class="text-center"><i>#Title#</i></h3>
                             <img src="#" width="100%"/>
                         </div>
                         <div class="external_sites">
-                            <a href="#"><img  src="Github_2x.png" width="100%"/></a>
+                            <a href="#"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="entry_bg">
                         <div class="portfolio_entry">
+                            <h3 class="text-center"><i>#Title#</i></h3>
                             <img src="#" width="100%"/>
                         </div>
                         <div class="external_sites">
-                            <a href="#"><img  src="Github_2x.png" width="100%"/></a>
+                            <a href="#"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
