Added html and css of an overlay effect on portfolio entry images and details.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
                     <div class="entry_bg">
                         <div class="portfolio_entry">
                             <h3 class="text-center"><i>Music Store</i></h3>
-                            <img src="music_store.png" width="100%"/>
+                            <div class="portfolio_detail">
+                                <img src="music_store.png" class="entry_image" width="100%"/>
+                                <div class="middle">
+                                    <div class="entry_info">###TESTING###</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="external_sites">
                             <a href="#"><img src="Github_2x.png" width="100%"/></a>
@@ -62,7 +67,12 @@
                     <div class="entry_bg">
                         <div class="portfolio_entry">
                             <h4 class="text-center"><i>Rock, Paper, Scissors, Lizard, Spock</i></h4>
-                            <img src="rpsls.png" width="100%"/>
+                            <div class="portfolio_detail">
+                                <img src="rpsls.png" class="entry_image" width="100%"/>
+                                <div class="middle">
+                                    <div class="entry_info">###TESTING###</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="external_sites">
                             <a href="#"><img src="Github_2x.png" width="100%"/></a>
@@ -73,7 +83,12 @@
                     <div class="entry_bg">
                         <div class="portfolio_entry">
                             <h3 class="text-center"><i>#Title#</i></h3>
-                            <img src="#" width="100%"/>
+                            <div class="portfolio_detail">
+                                <img src="#" class="entry_image" width="100%"/>
+                                <div class="middle">
+                                    <div class="entry_info">###TESTING###</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="external_sites">
                             <a href="#"><img src="Github_2x.png" width="100%"/></a>
@@ -86,7 +101,12 @@
                     <div class="entry_bg">
                         <div class="portfolio_entry">
                             <h3 class="text-center"><i>#Title#</i></h3>
-                            <img src="#" width="100%"/>
+                            <div class="portfolio_detail">
+                                <img src="#" class="entry_image" width="100%"/>
+                                <div class="middle">
+                                    <div class="entry_info">###TESTING###</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="external_sites">
                             <a href="#"><img src="Github_2x.png" width="100%"/></a>
@@ -97,7 +117,12 @@
                     <div class="entry_bg">
                         <div class="portfolio_entry">
                             <h3 class="text-center"><i>#Title#</i></h3>
-                            <img src="#" width="100%"/>
+                            <div class="portfolio_detail">
+                                <img src="#" class="entry_image" width="100%"/>
+                                <div class="middle">
+                                    <div class="entry_info">###TESTING###</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="external_sites">
                             <a href="#"><img src="Github_2x.png" width="100%"/></a>
@@ -108,7 +133,12 @@
                     <div class="entry_bg">
                         <div class="portfolio_entry">
                             <h3 class="text-center"><i>#Title#</i></h3>
-                            <img src="#" width="100%"/>
+                            <div class="portfolio_detail">
+                                <img src="#" class="entry_image" width="100%"/>
+                                <div class="middle">
+                                    <div class="entry_info">###TESTING###</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="external_sites">
                             <a href="#"><img src="Github_2x.png" width="100%"/></a>
