Added actual links for 3 of the entries and also "target=_blank" attribute to each portfolio entry

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a class="nav-brand" id="logo" href="#"><i>JQ.net</i></a>
                 <div class="navbar align-items-end">
                     <ul id="menu">
-                        <li><a href="#"><i>Portfolio</i></a></li>&nbsp;&nbsp;|&nbsp;&nbsp;
+                        <li><a href="#portfolio"><i>Portfolio</i></a></li>&nbsp;&nbsp;|&nbsp;&nbsp;
                         <li><a href="#"><i>Blog</i></a></li>&nbsp;&nbsp;|&nbsp;&nbsp;
                         <li><a href="#"><i>Contact</i></a></li>
                     </ul>
@@ -42,7 +42,7 @@
         </header>
         <!-- Main portfolio section -->
         <section>
-            <div class="align-content-center" id="portfolio_heading">
+            <div class="align-content-center portfolio_heading" id="portfolio">
                 <img src="Portfolio_2x.png" width="100%"/>
             </div>
             <!-- Portfolio entries -->
@@ -54,12 +54,12 @@
                             <div class="portfolio_detail">
                                 <img src="music_store.png" class="entry_image" width="100%"/>
                                 <div class="middle">
-                                    <div class="entry_info">###TESTING###</div>
+                                    <div class="entry_info">A school project concept music store with a MySQL database, shopping cart, and User Authentication written in PHP. Check out my source code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="#"><img src="Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/music-store" target="_blank"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -70,28 +70,28 @@
                             <div class="portfolio_detail">
                                 <img src="rpsls.png" class="entry_image" width="100%"/>
                                 <div class="middle">
-                                    <div class="entry_info">###TESTING###</div>
+                                    <div class="entry_info">A recreation of the classic game Rock Paper Scissors Lizard Spock. The game engine was written in JavaScript. Check out the source code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="#"><img src="Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/rpsls" target="_blank"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="entry_bg">
                         <div class="portfolio_entry">
-                            <h3 class="text-center"><i>#Title#</i></h3>
+                            <h3 class="text-center"><i>Video Game Store</i></h3>
                             <div class="portfolio_detail">
-                                <img src="#" class="entry_image" width="100%"/>
+                                <img src="video_game_store.png" class="entry_image" width="100%"/>
                                 <div class="middle">
-                                    <div class="entry_info">###TESTING###</div>
+                                    <div class="entry_info">This school project is a basic video game store.  The games' details and images were stored in a MySQL database. A shopping cart was also a focus in this project. Check out the source code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="#"><img src="Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/video_games" target="_blank"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="#"><img src="Github_2x.png" width="100%"/></a>
+                            <a href="#" target="_blank"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="#"><img src="Github_2x.png" width="100%"/></a>
+                            <a href="#" target="_blank"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="#"><img src="Github_2x.png" width="100%"/></a>
+                            <a href="#" target="_blank"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
