Updated entry background and added images and links for portfolio entries.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             </div>
             <!-- Portfolio entries -->
             <div class="row">
+                <!-- Entry 1 -->
                 <div class="col-12 col-md-4">
                     <div class="entry_bg">
                         <div class="portfolio_entry">
@@ -54,7 +55,7 @@
                             <div class="portfolio_detail">
                                 <img src="music_store.png" class="entry_image" width="100%"/>
                                 <div class="middle">
-                                    <div class="entry_info">A school project concept music store with a MySQL database, shopping cart, and User Authentication written in PHP. Check out my source code on GitHub.</div>
+                                    <div class="entry_info">A school project concept music store with a MySQL database, shopping cart, and User Authentication written in PHP. Check out my code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
@@ -63,6 +64,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Entry 2 -->
                 <div class="col-12 col-md-4">
                     <div class="entry_bg">
                         <div class="portfolio_entry">
@@ -70,7 +72,7 @@
                             <div class="portfolio_detail">
                                 <img src="rpsls.png" class="entry_image" width="100%"/>
                                 <div class="middle">
-                                    <div class="entry_info">A recreation of the classic game Rock Paper Scissors Lizard Spock. The game engine was written in JavaScript. Check out the source code on GitHub.</div>
+                                    <div class="entry_info">A recreation of the classic game Rock Paper Scissors Lizard Spock. The game engine was written in JavaScript. Check out my code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
@@ -79,6 +81,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Entry 3 -->
                 <div class="col-12 col-md-4">
                     <div class="entry_bg">
                         <div class="portfolio_entry">
@@ -86,7 +89,7 @@
                             <div class="portfolio_detail">
                                 <img src="video_game_store.png" class="entry_image" width="100%"/>
                                 <div class="middle">
-                                    <div class="entry_info">This school project is a basic video game store.  The games' details and images were stored in a MySQL database. A shopping cart was also a focus in this project. Check out the source code on GitHub.</div>
+                                    <div class="entry_info">This school project is a basic video game store.  The games' details and images were stored in a MySQL database. A shopping cart was also a focus in this project. Check out my code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
@@ -97,53 +100,56 @@
                 </div>
             </div>
             <div class="row">
+                <!-- Entry 4 -->
                 <div class="col-12 col-md-4">
                     <div class="entry_bg">
                         <div class="portfolio_entry">
-                            <h3 class="text-center"><i>#Title#</i></h3>
+                            <h3 class="text-center"><i>Number Averager</i></h3>
                             <div class="portfolio_detail">
-                                <img src="#" class="entry_image" width="100%"/>
+                                <img src="averager.png" class="entry_image" width="100%"/>
                                 <div class="middle">
-                                    <div class="entry_info">###TESTING###</div>
+                                    <div class="entry_info">This is my first C#.NET app. I built it for a coworker who regularly plays the "guess what number I'm thinking of game" with his staff. Check out my source code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="#" target="_blank"><img src="Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/numbers_hat" target="_blank"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
+                <!-- Entry 5 -->
                 <div class="col-12 col-md-4">
                     <div class="entry_bg">
                         <div class="portfolio_entry">
-                            <h3 class="text-center"><i>#Title#</i></h3>
+                            <h3 class="text-center"><i>Magic Number Hat</i></h3>
                             <div class="portfolio_detail">
-                                <img src="#" class="entry_image" width="100%"/>
+                                <img src="number_hat.png" class="entry_image" width="100%"/>
                                 <div class="middle">
-                                    <div class="entry_info">###TESTING###</div>
+                                    <div class="entry_info">This console app is (as the name implies) a number averager written in C#.NET. It calculates the average of numbers entered by the user. I also wrote this app with separate Classes. Check out my source code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="#" target="_blank"><img src="Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/Averager" target="_blank"><img src="Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
+                <!-- Entry 6 -->
                 <div class="col-12 col-md-4">
-                    <div class="entry_bg">
-                        <div class="portfolio_entry">
-                            <h3 class="text-center"><i>#Title#</i></h3>
-                            <div class="portfolio_detail">
-                                <img src="#" class="entry_image" width="100%"/>
-                                <div class="middle">
-                                    <div class="entry_info">###TESTING###</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="external_sites">
-                            <a href="#" target="_blank"><img src="Github_2x.png" width="100%"/></a>
-                        </div>
-                    </div>
+                    <!--<div class="entry_bg">-->
+                        <!--<div class="portfolio_entry">-->
+                            <!--<h3 class="text-center"><i>#Title#</i></h3>-->
+                            <!--<div class="portfolio_detail">-->
+                                <!--<img src="#" class="entry_image" width="100%"/>-->
+                                <!--<div class="middle">-->
+                                    <!--<div class="entry_info">###Entry detail###</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="external_sites">-->
+                            <!--<a href="#" target="_blank"><img src="Github_2x.png" width="100%"/></a>-->
+                        <!--</div>-->
+                    <!--</div>-->
                 </div>
             </div>
         </section>
