fixed image links by adding "images/" folder

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <ul id="menu">
                         <li><a href="#portfolio"><i>Portfolio</i></a></li>&nbsp;&nbsp;|&nbsp;&nbsp;
                         <li><a href="#"><i>Blog</i></a></li>&nbsp;&nbsp;|&nbsp;&nbsp;
-                        <li><a href="#"><i>Contact</i></a></li>
+                        <li><a href="#contact"><i>Contact</i></a></li>
                     </ul>
                 </div>
             </nav>
@@ -32,10 +32,10 @@
                             <img src="" width="" />
                         </div>
                     </div>
-                    <img class="d-flex align-content-center flex-column" id="hero-image" src="hero_image_2x.png" alt="computing devices" />
+                    <img class="d-flex align-content-center flex-column" id="hero-image" src="images/hero_image_2x.png" alt="computing devices" />
                     <div class="external_sites">
-                        <a href="#"><img class="float-right" src="LinkedIn_2x.png" width="100%"/></a>
-                        <a href="#"><img class="float-right" src="Github_2x.png" width="100%"/></a>
+                        <a href="#"><img class="float-right" src="images/LinkedIn_2x.png" width="100%"/></a>
+                        <a href="#"><img class="float-right" src="images/Github_2x.png" width="100%"/></a>
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
         <!-- Main portfolio section -->
         <section>
             <div class="align-content-center portfolio_heading" id="portfolio">
-                <img src="Portfolio_2x.png" width="100%"/>
+                <img src="images/Portfolio_2x.png" width="100%"/>
             </div>
             <!-- Portfolio entries -->
             <div class="row">
@@ -53,14 +53,14 @@
                         <div class="portfolio_entry">
                             <h3 class="text-center"><i>Music Store</i></h3>
                             <div class="portfolio_detail">
-                                <img src="music_store.png" class="entry_image" width="100%"/>
+                                <img src="images/music_store.png" class="entry_image" width="100%"/>
                                 <div class="middle">
                                     <div class="entry_info">A school project concept music store with a MySQL database, shopping cart, and User Authentication written in PHP. Check out my code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="https://github.com/jmoney618/music-store" target="_blank"><img src="Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/music-store" target="_blank"><img src="images/Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -70,14 +70,14 @@
                         <div class="portfolio_entry">
                             <h4 class="text-center"><i>Rock, Paper, Scissors, Lizard, Spock</i></h4>
                             <div class="portfolio_detail">
-                                <img src="rpsls.png" class="entry_image" width="100%"/>
+                                <img src="images/rpsls.png" class="entry_image" width="100%"/>
                                 <div class="middle">
                                     <div class="entry_info">A recreation of the classic game Rock Paper Scissors Lizard Spock. The game engine was written in JavaScript. Check out my code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="https://github.com/jmoney618/rpsls" target="_blank"><img src="Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/rpsls" target="_blank"><img src="images/Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -87,14 +87,14 @@
                         <div class="portfolio_entry">
                             <h3 class="text-center"><i>Video Game Store</i></h3>
                             <div class="portfolio_detail">
-                                <img src="video_game_store.png" class="entry_image" width="100%"/>
+                                <img src="images/video_game_store.png" class="entry_image" width="100%"/>
                                 <div class="middle">
                                     <div class="entry_info">This school project is a basic video game store.  The games' details and images were stored in a MySQL database. A shopping cart was also a focus in this project. Check out my code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="https://github.com/jmoney618/video_games" target="_blank"><img src="Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/video_games" target="_blank"><img src="images/Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -106,14 +106,14 @@
                         <div class="portfolio_entry">
                             <h3 class="text-center"><i>Number Averager</i></h3>
                             <div class="portfolio_detail">
-                                <img src="averager.png" class="entry_image" width="100%"/>
+                                <img src="images/averager.png" class="entry_image" width="100%"/>
                                 <div class="middle">
                                     <div class="entry_info">This is my first C#.NET app. I built it for a coworker who regularly plays the "guess what number I'm thinking of game" with his staff. Check out my source code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="https://github.com/jmoney618/numbers_hat" target="_blank"><img src="Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/numbers_hat" target="_blank"><img src="images/Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -123,14 +123,14 @@
                         <div class="portfolio_entry">
                             <h3 class="text-center"><i>Magic Number Hat</i></h3>
                             <div class="portfolio_detail">
-                                <img src="number_hat.png" class="entry_image" width="100%"/>
+                                <img src="images/number_hat.png" class="entry_image" width="100%"/>
                                 <div class="middle">
                                     <div class="entry_info">This console app is (as the name implies) a number averager written in C#.NET. It calculates the average of numbers entered by the user. I also wrote this app with separate Classes. Check out my source code on GitHub.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="external_sites">
-                            <a href="https://github.com/jmoney618/Averager" target="_blank"><img src="Github_2x.png" width="100%"/></a>
+                            <a href="https://github.com/jmoney618/Averager" target="_blank"><img src="images/Github_2x.png" width="100%"/></a>
                         </div>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
     </div><!-- End main container -->
     <div class="footer">
         <div class="container">
-
+            <div id="contact"></div>
         </div>
     </div>
 <!-- Optional JavaScript -->
